# Forge

./: .env.example  .gitignore  LICENSE  README.md  app.py  packages.txt  pyproject.toml  requirements.txt
docker/: Dockerfile
docs/: Forge_Project_Outline.md  P2_IMPLEMENTATION_GUIDE.md
forge/: __init__.py  config.py  graph.py  llm.py  state.py
forge/agents/: __init__.py  analysis.py  patch.py  recon.py  validation.py
forge/sandbox/: __init__.py  docker_runner.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentPipeline.tsx  Navbar.tsx  ResultsSection.tsx  UploadCard.tsx
frontend/types/: index.ts
samples/easy/: 31684576_1.c  leak.c
tests/: test_analysis.py  test_end_to_end.py  test_file.py  test_graph_smoke.py  test_patch.py  test_recon.py  test_validation.py  test_xv6.py
